package ca.mcmaster.cas.se2aa4.a2.generator;

/**
 * @author loux8@mcmaster.ca
 * @date 2023/2/27 10:14
 */
public enum MeshKind {
    grid,irregular
}
